# today-band-backend

./: README.md  build.sh  pyproject.toml  render.yaml  requirements.txt
bands/: admin.py  models.py  serializers.py  urls.py  views.py
bands/migrations/: 0001_initial.py  0002_band_classification.py  0002_genre_alter_bands_options_remove_bands_genre_and_more.py  0002_initial.py  0003_band_music_links.py  0003_remove_band_user.py  0004_band_music_photo.py  0005_remove_band_music_links_band_introduction.py  0006_alter_band_photo.py  0007_band_member_photos.py  0008_band_member_info.py
comments/: admin.py  models.py  serializers.py  urls.py  views.py
comments/migrations/: 0001_initial.py  0002_alter_comment_options.py  0002_comment_user.py
config/: authentication.py  settings.py  urls.py
likes/: admin.py  models.py  serializers.py  urls.py  views.py
likes/migrations/: 0001_initial.py  0002_alter_likes_options_alter_likes_bands_and_more.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
